fixed rendering issue on iOS

--- a/style.css
+++ b/style.css
@@ -16,8 +16,10 @@ td {
 td input {
 	width:40px;
 	height:40px;
+	padding: 0;
 	text-align: center;
 	font-size: 30px;
+	border-radius: 0;
 }
 td:first-child {
   border-left:solid;
